Styling and content

--- a/write/volunteer-motivations.html
+++ b/write/volunteer-motivations.html
@@ -5,7 +5,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="/main.css" rel="stylesheet">
 
-<body class="container">
+<body>
+  <div class="container">
   <div class="header page">
     <div class="name">
       <h1>Sabine's Writing</h1>
@@ -20,7 +21,7 @@
       </ul>
     </nav>
   </div>
-  <div class="body writing-post">
+  <div class="content writing-post">
     <div class="writing-intro">
       <p>Research Report for completion of my Bachelor of Arts Honours in Psychology</p>
       <p><em>Note: This report has <b>not</b> been peer reviewed</em></p>
@@ -311,10 +312,10 @@
     </ol>
   </div>
   </div>
-</body>
+
 <footer>
   <div class="footer-copyright">© Copyright 2022 | Sabine Vidal</div>
 </footer>
-
+</div>
 </body>
 </html>
