--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <ul>
           <li><a href="code.html">Code</a></li>
           <li><a href="write.html">Write</a></li>
-          <li><a href="photograph.html">Photograph</a></li>
+          <li><a href="#photograph">Photograph</a></li>
           <li><a href="#create">Create</a></li>
         </ul>
       </nav>
       <picture aria-hidden="true">
-        <img src="img/sabine_lowtech2.webp" >
+        <img src="img/sabine_lowtech.webp" >
       </picture>
       <div class="about">
         <p>Human, being. <br> Empathy-driven software developer with a background in psychology and travel. Ultra creative, with a love for problem solving, self-development and diy projects.</p>
@@ -41,7 +41,7 @@
           </p>
           <p>
             My <a href="https://github.com/sabinevidal" target="_blank">GitHub</a> is where most of my code lives.
-            However, I'v collated some of my favourite projects over on <a href="/code.html" target="_blank">this page</a>.
+            However, I've collated some of my favourite projects over on <a href="/code.html" target="_blank">this page</a>.
           </p>
           <p> I have experience working with Python, Ruby, PHP, Javascript, SQL, HTML, and CSS, and a number of frameworks.</p>
         </div>
@@ -66,8 +66,8 @@
             <p>
               Since my parents' old Kodak 35mm point and shoot camera was put in my hands at the age of 7 years old, I have been drawn to the magic of photography.
               I have a special interest in travel and architectural photography, capturing candid moments of the world around me.
-              I've curated some of my favourite photos from over the years <a href="./photograph.html">here</a>.
-              A more complete collection of my photography can be found on <a href="https://www.flickr.com/photos/sabinevidal/" target="_blank">Flickr</a>.
+              <!-- I've curated some of my favourite photos from over the years <a href="./photograph.html">here</a>. -->
+              A more complete collection of my photography can be found on <a href="https://www.flickr.com/photos/sabinevidal/" target="_blank">Flickr</a> or on <a href="https://instagram.com/sabinecamille" target="_blank" >Instagram</a>.
             </p>
             <picture class="photo-first">
               <img src="img/Bergen.webp" alt="">
@@ -94,6 +94,46 @@
               </a>
             </picture>
           </div>
+        </div>
+        <div class="box" id="background">
+          <h2>Background</h2>
+          <table>
+            <tr>
+              <td>Intern Software Developer</td>
+              <td class="place">Outreachy / UNICEF Office of Innovation</td>
+              <td class="date">Dec 2021 - Mar 2022</td>
+            </tr>
+            <tr>
+              <td>Intern & Junior Web Developer</td>
+              <td class="place">LimaBean</td>
+              <td class="date">2020</td>
+            </tr>
+            <tr>
+              <td>Software Developer Programme</td>
+              <td class="place">Launch School</td>
+              <td class="date">2021 - current</td>
+            </tr>
+            <tr>
+              <td>Country Sales Specialist</td>
+              <td class="place">Audley Travel</td>
+              <td class="date">2018</td>
+            </tr>
+            <tr>
+              <td>Bachelor of Arts (Hons) in Counselling Psychology</td>
+              <td class="place">UNISA</td>
+              <td class="date">2018</td>
+            </tr>
+            <tr>
+              <td>BSocSc in Psychology and Sociology</td>
+              <td class="place">UCT</td>
+              <td class="date">2016</td>
+            </tr>
+            <tr>
+              <td>Bachelor of Architectural Studies</td>
+              <td class="place">UCT</td>
+              <td class="date">2012-2103 incomplete</td>
+            </tr>
+          </table>
         </div>
         <div class="box" id="low-tech">
           <h2>This is a Low-Tech Website</h2>
