--- a/write/volunteer-motivations.html
+++ b/write/volunteer-motivations.html
@@ -16,8 +16,8 @@
         <li><a href="/index.html">Home</a></li>
         <li><a href="/code.html">Code</a></li>
         <li><a href="/write.html">Write</a></li>
-        <li><a href="/photograph.html">Photograph</a></li>
-        <!-- <li><a href="">Create</a></li> -->
+        <li><a href="index.html#photograph">Photograph</a></li>
+        <li><a href="index.html#create">Create</a></li>
       </ul>
     </nav>
   </div>
