--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="img/sabine_lowtech.webp" >
       </picture>
       <div class="about">
-        <p>Human, being. <br> Empathy-driven software developer with a background in psychology and travel. Ultra creative, with a love for problem solving, self-development and diy projects.</p>
+        <p>Human, being. <br> An empathy-driven problem solver with an interest in the social innovation space and a particular focus on the intersection of mental health, childhood, inequality and technology.</p>
       </div>
     </div>
     <div class="content">
@@ -104,14 +104,14 @@
               <td class="date">Dec 2021 - Mar 2022</td>
             </tr>
             <tr>
-              <td>Intern & Junior Web Developer</td>
-              <td class="place">LimaBean</td>
-              <td class="date">2020</td>
-            </tr>
-            <tr>
               <td>Software Developer Programme</td>
               <td class="place">Launch School</td>
               <td class="date">2021 - current</td>
+            </tr>
+            <tr>
+              <td>Intern & Junior Web Developer</td>
+              <td class="place">LimaBean</td>
+              <td class="date">2020</td>
             </tr>
             <tr>
               <td>Country Sales Specialist</td>
