--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <li>Images are saved at the max size they'll be used</li>
             <li>Inline SVGs are used whenever possible</li>
             <li>No trackers</li>
-            <li>Total uploaded size &#8776; XXX MB </li>
+            <li>Total uploaded size &#8776; 2.6 MB </li>
           </ul>
         </div>
     </div>
