--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>Sabine Vidal</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link href="/main.css" rel="stylesheet">
+<link href="main.css" rel="stylesheet">
 
 <style>
 </style>
