--- a/write.html
+++ b/write.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <title>Sabine Vidal</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<link href="/main.css" rel="stylesheet">
+<link href="main.css" rel="stylesheet">
 
 <body>
   <div class="container" id="write-page">
@@ -17,7 +17,7 @@
           <li><a href="code.html">Code</a></li>
           <li><a href="write.html" class="active">Write</a></li>
           <li><a href="index.html#photograph">Photograph</a></li>
-        <li><a href="index.html#create">Create</a></li>
+          <li><a href="index.html#create">Create</a></li>
         </ul>
       </nav>
     </div>
